<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_gold"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart_gold"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_gold"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_gold"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_purchased_accounts"
            android:icon="@drawable/ic_account_gold"
            android:title="@string/menu_purchased_accounts" />
        <item
            android:id="@+id/nav_deposit"
            android:icon="@drawable/ic_deposit_gold"
            android:title="@string/menu_deposit" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_gold"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Cài đặt">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_gold"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>