<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/riot_black_dark"
    android:gravity="center_vertical"
    tools:context=".ui.auth.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_forgot_password"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/riot_gold_accent"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_password_instruction"
        android:textColor="@color/riot_text_light"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/et_email_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:textColor="@color/riot_text_light"
        android:textColorHint="@color/riot_text_hint"
        android:backgroundTint="@color/riot_gold_accent"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_password"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/riot_red_primary"
        android:textColor="@color/riot_text_light"
        android:paddingVertical="12dp"
        android:textStyle="bold"/>

</LinearLayout>