<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/riot_red_primary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <EditText
        android:id="@+id/et_drawer_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/action_search"
        android:padding="8dp"
        android:background="@drawable/bg_rounded_search"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:textColor="@color/riot_black_dark"
        android:textColorHint="@color/riot_text_hint"
        android:backgroundTint="@color/riot_text_light"
        android:minHeight="48dp" android:textSize="14sp"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/riot_gold_accent"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/riot_text_light"/>
</LinearLayout>